--- a/src/view/xml/editStudent.fxml
+++ b/src/view/xml/editStudent.fxml
@@ -5,21 +5,20 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="155.0" layoutY="200.0" text="Nome" />
-      <Label layoutX="155.0" layoutY="256.0" prefHeight="15.0" prefWidth="48.0" text="E-mail" />
-      <TextField fx:id="name" layoutX="155.0" layoutY="215.0" prefHeight="25.0" prefWidth="323.0" />
+      <Label layoutX="155.0" layoutY="256.0" text="CPF" />
+      <TextField fx:id="name" layoutX="155.0" layoutY="215.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="204.0" layoutY="35.0" minHeight="83.0" prefWidth="233.0" text="SIGAZ" textAlignment="CENTER">
          <font>
-            <Font size="50.0" />
+            <Font name="Noto Sans Bold" size="72.0" />
          </font>
       </Label>
-      <Label layoutX="281.0" layoutY="135.0" text="Editar Aluno" />
-      <TextField fx:id="email" layoutX="155.0" layoutY="271.0" prefHeight="25.0" prefWidth="323.0" />
+      <Label layoutX="275.0" layoutY="137.0" text="Editar Aluno" />
+      <TextField fx:id="cpf" layoutX="155.0" layoutY="271.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
       <Label layoutX="155.0" layoutY="310.0" text="Endereço" />
-      <TextField fx:id="address" layoutX="155.0" layoutY="325.0" prefHeight="25.0" prefWidth="323.0" />
-      <Button fx:id="saveEditions" layoutX="251.0" layoutY="423.0" mnemonicParsing="false" text="Salvar Alteraçoes" />
+      <TextField fx:id="address" layoutX="155.0" layoutY="325.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
+      <Button fx:id="saveEditions" layoutX="240.0" layoutY="403.0" mnemonicParsing="false" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Salvar Alteraçoes" />
    </children>
 </Pane>
