--- a/src/view/xml/editClassroom.fxml
+++ b/src/view/xml/editClassroom.fxml
@@ -54,22 +54,51 @@
             <Image url="@../../../resources/icons/user.png" />
          </image>
       </ImageView>
-      <Pane layoutX="300.0" layoutY="64.0" prefHeight="147.0" prefWidth="680.0" style="-fx-background-color: #FFFFFF;">
+      <Pane layoutX="300.0" layoutY="64.0" prefHeight="656.0" prefWidth="680.0" style="-fx-background-color: #FFFFFF;">
          <children>
-            <Label layoutX="14.0" layoutY="98.0" text="Minhas Turmas">
+            <Label layoutX="14.0" layoutY="32.0" text="Editar Turma">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="14.0" />
                </font>
             </Label>
+            <Label layoutX="44.0" layoutY="84.0" text="Disciplina">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="subjectBox" layoutX="44.0" layoutY="100.0" prefHeight="32.0" prefWidth="397.0" promptText="Selecione uma disciplina" style="-fx-background-color: #FFFFFF; -fx-border-color: #282828; -fx-border-width: 0.2;" />
+            <Label layoutX="44.0" layoutY="145.0" text="Professor">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="professorBox" layoutX="44.0" layoutY="161.0" prefHeight="32.0" prefWidth="397.0" promptText="Selecione o professor" style="-fx-background-color: #FFFFFF; -fx-border-color: #282828; -fx-border-width: 0.2;" />
+            <Label layoutX="43.0" layoutY="205.0" text="Horario">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="schedule" layoutX="44.0" layoutY="221.0" prefHeight="32.0" prefWidth="397.0" />
+            <Label layoutX="43.0" layoutY="264.0" text="Local">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="place" layoutX="44.0" layoutY="280.0" prefHeight="32.0" prefWidth="397.0" />
+            <Label layoutX="43.0" layoutY="379.0" text="Selecionar alunos">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Button fx:id="selectStudents" layoutX="43.0" layoutY="395.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="184.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Selecionar alunos" />
+            <Button fx:id="registerClassroom" layoutX="40.0" layoutY="562.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="160.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar Turma" />
+            <Label layoutX="43.0" layoutY="320.0" text="Status">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <CheckBox layoutX="43.0" layoutY="336.0" mnemonicParsing="false" selected="true" />
          </children>
       </Pane>
-      <TableView fx:id="classroomsTable" layoutX="300.0" layoutY="210.0" prefHeight="501.0" prefWidth="680.0">
-        <columns>
-          <TableColumn fx:id="classroomName" editable="false" prefWidth="144.0" style="font: 10px;" text="Disciplina" />
-          <TableColumn fx:id="classroomPlace" editable="false" prefWidth="201.0" text="Local" />
-            <TableColumn fx:id="classroomSchedule" editable="false" prefWidth="192.0" text="Horario" />
-            <TableColumn fx:id="classroomStatus" editable="false" prefWidth="142.0" text="Status" />
-        </columns>
-      </TableView>
    </children>
 </Pane>
