--- a/src/view/xml/grades.fxml
+++ b/src/view/xml/grades.fxml
@@ -56,20 +56,29 @@
       </ImageView>
       <Pane layoutX="300.0" layoutY="64.0" prefHeight="147.0" prefWidth="680.0" style="-fx-background-color: #FFFFFF;">
          <children>
-            <Label layoutX="14.0" layoutY="98.0" text="Minhas Turmas">
+            <Label layoutX="14.0" layoutY="98.0" text="Boletim">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
          </children>
       </Pane>
-      <TableView fx:id="classroomsTable" layoutX="300.0" layoutY="210.0" prefHeight="501.0" prefWidth="680.0">
+      <TableView fx:id="gradesTable" layoutX="300.0" layoutY="210.0" prefHeight="338.0" prefWidth="680.0">
         <columns>
-          <TableColumn fx:id="classroomName" editable="false" prefWidth="144.0" style="font: 10px;" text="Disciplina" />
-          <TableColumn fx:id="classroomPlace" editable="false" prefWidth="201.0" text="Local" />
-            <TableColumn fx:id="classroomSchedule" editable="false" prefWidth="192.0" text="Horario" />
-            <TableColumn fx:id="classroomStatus" editable="false" prefWidth="142.0" text="Status" />
+          <TableColumn fx:id="subjectName" editable="false" prefWidth="144.0" style="font: 10px;" text="Disciplina" />
+          <TableColumn fx:id="P1" editable="false" prefWidth="56.0" text="Nota 1" />
+            <TableColumn fx:id="P2" editable="false" prefWidth="58.0" text="Nota 2" />
+            <TableColumn fx:id="P3" editable="false" prefWidth="55.0" text="Nota 3" />
+            <TableColumn fx:id="P4" prefWidth="90.0" text="Prova Final" />
+            <TableColumn fx:id="average" prefWidth="54.0" text="Media" />
+            <TableColumn fx:id="frequency" prefWidth="75.0" text="Faltas" />
+            <TableColumn fx:id="status" prefWidth="147.0" text="Status" />
         </columns>
       </TableView>
+      <Button fx:id="printGrandesButton" layoutX="800.0" layoutY="642.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: DEDEDE;" text="Imprimir boletim">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
