--- a/src/view/xml/login.fxml
+++ b/src/view/xml/login.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 640; -fx-pref-height: 480; -fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AuthController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-pref-width: 640; -fx-pref-height: 480; -fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AuthController">
    <children>
       <Pane layoutX="160.0" prefHeight="200.0" prefWidth="200.0" style="-fx-pref-width: 320; -fx-pref-height: 160;">
          <children>
@@ -32,8 +23,8 @@
             <Label layoutY="71.0" prefHeight="17.0" prefWidth="42.0" text="Senha" />
             <PasswordField fx:id="password" layoutY="88.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
             <Button fx:id="loginButton" alignment="CENTER" layoutX="80.0" layoutY="186.0" mnemonicParsing="false" onAction="#authenticate" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Entrar" />
-            <Hyperlink fx:id="register" layoutY="125.0" text="Fazer cadastro" textFill="#284896" />
-            <Hyperlink fx:id="recoverPassword" layoutX="184.0" layoutY="125.0" text="Esqueceu a senha?" textFill="#284896" />
+            <Hyperlink fx:id="register" layoutY="125.0" text="Fazer cadastro" textFill="#0063b1" />
+            <Hyperlink fx:id="recoverPassword" layoutX="212.0" layoutY="125.0" text="Esqueceu a senha?" textFill="#0063b1" />
          </children>
       </Pane>
    </children>
