--- a/src/view/xml/registerProfessor.fxml
+++ b/src/view/xml/registerProfessor.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ProfessorController">
    <children>
       <Label layoutX="155.0" layoutY="200.0" text="Nome" />
       <Label layoutX="155.0" layoutY="256.0" text="CPF" />
@@ -19,6 +19,6 @@
       <TextField fx:id="cpf" layoutX="155.0" layoutY="271.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
       <Label layoutX="155.0" layoutY="310.0" text="Endereço" />
       <TextField fx:id="address" layoutX="155.0" layoutY="325.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
-      <Button fx:id="register" layoutX="240.0" layoutY="403.0" mnemonicParsing="false" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar" />
+      <Button onAction="#store" layoutX="240.0" layoutY="403.0" mnemonicParsing="false" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar" />
    </children>
 </Pane>
