--- a/src/view/xml/registerSubject.fxml
+++ b/src/view/xml/registerSubject.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SubjectController">
    <children>
       <Label layoutX="155.0" layoutY="200.0" text="Nome da Disciplina" />
       <Label layoutX="155.0" layoutY="256.0" prefHeight="15.0" prefWidth="133.0" text="Codigo da Disciplina" />
@@ -17,6 +17,6 @@
       </Label>
       <Label layoutX="255.0" layoutY="134.0" text="Cadastrar Disciplina" />
       <TextField fx:id="code" layoutX="155.0" layoutY="271.0" prefHeight="25.0" prefWidth="323.0" style="-fx-pref-width: 320; -fx-pref-height: 32;" />
-      <Button fx:id="register" layoutX="241.0" layoutY="367.0" mnemonicParsing="false" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar" />
+      <Button onAction="#store" layoutX="241.0" layoutY="367.0" mnemonicParsing="false" style="-fx-pref-width: 160; -fx-pref-height: 40; -fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE;" text="Cadastrar" />
    </children>
 </Pane>
