--- a/src/view/xml/searchClassroom.fxml
+++ b/src/view/xml/searchClassroom.fxml
@@ -13,21 +13,17 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ClassroomController">
    <children>
       <Pane prefHeight="64.0" prefWidth="1280.0">
          <children>
-            <Pane prefHeight="64.0" prefWidth="300.0">
+            <Pane prefHeight="64.0" prefWidth="300.0" style="-fx-background-color: #FBFBFB;">
                <children>
-                  <HBox alignment="CENTER" layoutY="8.0" prefHeight="48.0" prefWidth="300.0">
-                     <children>
-                        <ImageView fitHeight="48.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../resources/img/logo/LogoSmall.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </HBox>
+                  <Hyperlink onAction="#home" layoutX="79.0" layoutY="3.0" text="SIGAZ" textFill="#2c2a2a">
+                     <font>
+                        <Font name="System Bold" size="36.0" />
+                     </font>
+                  </Hyperlink>
                </children>
             </Pane>
             <Pane layoutX="980.0" prefHeight="64.0" prefWidth="300.0">
@@ -65,7 +61,7 @@
                            <children>
                               <HBox alignment="CENTER" prefHeight="32.0" prefWidth="50.0">
                                  <children>
-                                    <Button mnemonicParsing="false" text="Sair" />
+                                    <Button onAction="#logout" mnemonicParsing="false" text="Sair" />
                                  </children>
                               </HBox>
                            </children>
@@ -84,7 +80,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" layoutX="16.0" prefHeight="48.0" prefWidth="284.0">
                            <children>
-                              <Hyperlink style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Turmas">
+                              <Hyperlink onAction="#classrooms" style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Turmas">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -97,7 +93,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" layoutX="16.0" prefHeight="48.0" prefWidth="284.0">
                            <children>
-                              <Hyperlink style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Disciplinas">
+                              <Hyperlink onAction="#subjects" style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Disciplinas">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -110,7 +106,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" layoutX="16.0" prefHeight="48.0" prefWidth="284.0">
                            <children>
-                              <Hyperlink style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Professores">
+                              <Hyperlink onAction="#professors" style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Professores">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -123,7 +119,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" layoutX="16.0" prefHeight="48.0" prefWidth="284.0">
                            <children>
-                              <Hyperlink style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Alunos">
+                              <Hyperlink onAction="#students" style="-fx-text-fill: black; -fx-underline: false; -fx-font-weight: 800;" text="Alunos">
                                  <font>
                                     <Font name="Verdana" size="14.0" />
                                  </font>
@@ -224,6 +220,15 @@
                         <HBox alignment="CENTER" layoutX="440.0" layoutY="40.0" prefHeight="32.0" prefWidth="240.0">
                            <children>
                               <Pagination maxPageIndicatorCount="4" prefWidth="148.0" style="-fx-font-size: 14; -fx-font-family: Verdana;" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" layoutY="40.0" prefHeight="48.0" prefWidth="240.0">
+                           <children>
+                              <Button fx:id="createButton" onAction="#create" mnemonicParsing="false" prefHeight="40.0" prefWidth="180.0" style="-fx-background-color: #FFFFFF; -fx-border-color: #DEDEDE; -fx-border-radius: 4; -fx-font-weight: 800;" text="Cadastrar Turma">
+                                 <font>
+                                    <Font name="Verdana" size="12.0" />
+                                 </font>
+                              </Button>
                            </children>
                         </HBox>
                      </children>
