--- a/src/view/xml/concludedSubjects.fxml
+++ b/src/view/xml/concludedSubjects.fxml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #F4F4F4;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane prefHeight="64.0" prefWidth="300.0" style="-fx-background-color: #FBFBFB;">
          <children>
-            <Hyperlink onAction="#home" layoutX="79.0" layoutY="3.0" text="SIGAZ" textFill="#2c2a2a">
+            <Hyperlink layoutX="79.0" layoutY="3.0" onAction="#home" style="-fx-underline: false;" text="SIGAZ" textFill="#2c2a2a">
                <font>
                   <Font name="System Bold" size="36.0" />
                </font>
@@ -20,22 +22,22 @@
       </Pane>
       <Pane layoutY="64.0" prefHeight="656.0" prefWidth="300.0" style="-fx-background-color: #F4F4F4;">
          <children>
-            <Hyperlink fx:id="classroomsLink" layoutX="14.0" layoutY="14.0" text="Turmas" textFill="#282828">
+            <Hyperlink fx:id="classroomsLink" layoutX="14.0" layoutY="14.0" style="-fx-underline: false;" text="Turmas" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Hyperlink>
-            <Hyperlink fx:id="subjectsLink" layoutX="14.0" layoutY="59.0" text="Disciplinas" textFill="#282828">
+            <Hyperlink fx:id="subjectsLink" layoutX="14.0" layoutY="59.0" style="-fx-underline: false;" text="Disciplinas" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Hyperlink>
-            <Hyperlink fx:id="professorsLink" layoutX="14.0" layoutY="105.0" text="Professores" textFill="#282828">
+            <Hyperlink fx:id="professorsLink" layoutX="14.0" layoutY="105.0" style="-fx-underline: false;" text="Professores" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Hyperlink>
-            <Hyperlink fx:id="studentsLink" layoutX="14.0" layoutY="153.0" text="Alunos" textFill="#282828">
+            <Hyperlink fx:id="studentsLink" layoutX="14.0" layoutY="153.0" style="-fx-underline: false;" text="Alunos" textFill="#282828">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -46,7 +48,7 @@
       <Pane layoutX="980.0" prefHeight="64.0" prefWidth="300.0">
          <children>
             <Label fx:id="userName" layoutX="14.0" layoutY="25.0" text="Joaozinho" />
-            <Hyperlink fx:id="exitLink" layoutX="250.0" layoutY="21.0" text="Sair" textFill="#282828" />
+            <Hyperlink fx:id="exitLink" layoutX="250.0" layoutY="21.0" style="-fx-underline: false;" text="Sair" textFill="#282828" />
          </children>
       </Pane>
       <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="1066.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
